--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -18,6 +18,9 @@ updates:
       include: "scope"
     pull-request-branch-name:
       separator: "/"
+    pull-request-title:
+      prefix: "deps"
+      include: "scope"
     labels:
       - "dependencies"
       - "client"
@@ -46,6 +49,9 @@ updates:
       include: "scope"
     pull-request-branch-name:
       separator: "/"
+    pull-request-title:
+      prefix: "deps"
+      include: "scope"
     labels:
       - "dependencies"
       - "server"
@@ -72,6 +78,9 @@ updates:
       include: "scope"
     pull-request-branch-name:
       separator: "/"
+    pull-request-title:
+      prefix: "deps"
+      include: "scope"
     labels:
       - "dependencies"
       - "cron"
@@ -94,6 +103,9 @@ updates:
       include: "scope"
     pull-request-branch-name:
       separator: "/"
+    pull-request-title:
+      prefix: "deps"
+      include: "scope"
     labels:
       - "dependencies"
       - "scripts"
@@ -116,6 +128,9 @@ updates:
       include: "scope"
     pull-request-branch-name:
       separator: "/"
+    pull-request-title:
+      prefix: "deps"
+      include: "scope"
     labels:
       - "dependencies"
       - "mock-server"
@@ -138,6 +153,9 @@ updates:
       include: "scope"
     pull-request-branch-name:
       separator: "/"
+    pull-request-title:
+      prefix: "deps"
+      include: "scope"
     labels:
       - "dependencies"
       - "e2e-tests"
@@ -160,6 +178,9 @@ updates:
       include: "scope"
     pull-request-branch-name:
       separator: "/"
+    pull-request-title:
+      prefix: "deps"
+      include: "scope"
     labels:
       - "dependencies"
       - "integration-tests"
@@ -182,6 +203,9 @@ updates:
       include: "scope"
     pull-request-branch-name:
       separator: "/"
+    pull-request-title:
+      prefix: "deps"
+      include: "scope"
     labels:
       - "dependencies"
       - "types-package"
@@ -204,6 +228,9 @@ updates:
       include: "scope"
     pull-request-branch-name:
       separator: "/"
+    pull-request-title:
+      prefix: "deps"
+      include: "scope"
     labels:
       - "dependencies"
       - "sdk-package"
@@ -225,6 +252,9 @@ updates:
       include: "scope"
     pull-request-branch-name:
       separator: "/"
+    pull-request-title:
+      prefix: "deps"
+      include: "scope"
     labels:
       - "dependencies"
       - "github-actions"
