chore: Simplify job dependencies in PR validation workflow

--- a/.github/workflows/pr-validation.yml
+++ b/.github/workflows/pr-validation.yml
@@ -50,14 +50,14 @@ jobs:
   # Job 5: Server validation
   validate-server:
     name: Server
-    needs: [basic-validation, validate-packages-types, validate-packages-sdk]
+    needs: [basic-validation, validate-packages-types]
     if: always() && (needs.basic-validation.outputs.server-changed == 'true' || needs.basic-validation.outputs.github-changed == 'true')
     uses: ./.github/workflows/validate-server.yml
 
   # Job 6: Mock Server validation
   validate-mock-server:
     name: Mock Server
-    needs: [basic-validation, validate-packages-types, validate-packages-sdk]
+    needs: [basic-validation, validate-packages-types]
     if: always() && (needs.basic-validation.outputs.mock-server-changed == 'true' || needs.basic-validation.outputs.github-changed == 'true')
     uses: ./.github/workflows/validate-mock-server.yml
 
@@ -102,7 +102,7 @@ jobs:
   integration-testing:
     name: Integration Testing
     needs: [ basic-validation, validate-packages-types, validate-packages-sdk, validate-server, validate-mock-server ]
-    if: always() && (needs.basic-validation.outputs.tests-integration-changed == 'true' || needs.basic-validation.outputs.server-changed == 'true' || needs.basic-validation.outputs.github-changed == 'true') && needs.validate-server.result == 'success' && (needs.validate-mock-server.result == 'success' || needs.validate-mock-server.result == 'skipped')
+    if: needs.basic-validation.outputs.tests-integration-changed == 'true' || needs.basic-validation.outputs.server-changed == 'true' || needs.basic-validation.outputs.github-changed == 'true') && needs.validate-server.result == 'success' && (needs.validate-mock-server.result == 'success' || needs.validate-mock-server.result == 'skipped'
     uses: ./.github/workflows/validate-integration.yml
     secrets:
       API_SECURITY_KEY: ${{ secrets.API_SECURITY_KEY }}
@@ -123,7 +123,7 @@ jobs:
     container: mcr.microsoft.com/playwright:v1.55.1-noble
     runs-on: ubuntu-latest
     needs: [ basic-validation, validate-packages-types, validate-packages-sdk, validate-client, validate-server, integration-testing ]
-    if: always() && ((needs.basic-validation.result == 'success' || needs.basic-validation.outputs.tests-e2e-changed ) && (needs.basic-validation.outputs.client-changed == 'true' || needs.basic-validation.outputs.server-changed == 'true' || needs.basic-validation.outputs.github-changed == 'true') && (needs.integration-testing.result == 'success' || needs.integration-testing.result == 'skipped') && (needs.validate-client.result == 'success' || needs.validate-client.result == 'skipped') && (needs.validate-server.result == 'success' || needs.validate-server.result == 'skipped'))
+    if: (needs.basic-validation.result == 'success' || needs.basic-validation.outputs.tests-e2e-changed ) && (needs.basic-validation.outputs.client-changed == 'true' || needs.basic-validation.outputs.server-changed == 'true' || needs.basic-validation.outputs.github-changed == 'true') && (needs.integration-testing.result == 'success' || needs.integration-testing.result == 'skipped') && (needs.validate-client.result == 'success' || needs.validate-client.result == 'skipped') && (needs.validate-server.result == 'success' || needs.validate-server.result == 'skipped')
     timeout-minutes: 30
     services:
       mysql:
