--- a/server/package.json
+++ b/server/package.json
@@ -1,7 +1,7 @@
 {
   "name": "server",
   "version": "1.0.0",
-  "description": "TypeScript server for Cypress dashboard data",
+  "description": "TypeScript server for My dashboard data",
   "main": "dist/index.js",
   "scripts": {
     "start": "node dist/index.js",
@@ -14,7 +14,7 @@
     "typecheck": "tsc --noEmit"
   },
   "engines": {
-    "node": "v22.19.0"
+    "node": "v22.20.0"
   },
   "dependencies": {
     "@my-dashboard/types": "file:../packages/types",
