feat(server): Implement E2E report processor with Redis integration and report generation logic

--- a/server/.env.example
+++ b/server/.env.example
@@ -36,3 +36,6 @@ JIRA_EMAIL=your-jira-email
 # Brute-force protection settings
 BRUTE_FORCE_WINDOW_MS=600000
 BRUTE_FORCE_MAX_ATTEMPTS=3
+
+# Redis Configuration
+REDIS_URL=redis://localhost:6379
