--- a/server/package.json
+++ b/server/package.json
@@ -11,7 +11,10 @@
     "lint": "eslint .",
     "lint-fix": "eslint . --fix",
     "test": "jest",
-    "typecheck": "tsc --noEmit"
+    "typecheck": "tsc --noEmit",
+    "processor": "node dist/processor/start-processor.js",
+    "processor:dev": "ts-node-dev --respawn src/processor/start-processor.ts",
+    "publish-report": "ts-node src/examples/publish-e2e-report-request.ts"
   },
   "engines": {
     "node": "v22.20.0"
@@ -27,7 +30,10 @@
     "firebase": "^12.2.1",
     "firebase-admin": "^13.5.0",
     "helmet": "^8.1.0",
-    "mysql2": "^3.14.5"
+    "ioredis": "^5.8.0",
+    "luxon": "^3.7.2",
+    "mysql2": "^3.14.5",
+    "uuid": "^11.1.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.36.0",
@@ -36,6 +42,8 @@
     "@types/express-rate-limit": "^5.1.3",
     "@types/jest": "^30.0.0",
     "@types/node": "^24.5.2",
+    "@types/luxon": "^3.7.1",
+    "@types/uuid": "^10.0.0",
     "@typescript-eslint/eslint-plugin": "^8.43.0",
     "@typescript-eslint/parser": "^8.43.0",
     "eslint": "^9.36.0",
