--- a/cron/package.json
+++ b/cron/package.json
@@ -11,13 +11,18 @@
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
+    "@my-dashboard/types": "file:../packages/types",
     "config": "^4.1.1",
     "dotenv": "^17.2.2",
-    "node-cron": "^4.2.1"
+    "luxon": "^3.7.2",
+    "node-cron": "^4.2.1",
+    "ioredis": "^5.8.0",
+    "uuid": "^11.1.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.36.0",
     "@types/config": "^3.3.0",
+    "@types/luxon": "^3.7.1",
     "@types/node": "^24.6.0",
     "@types/node-cron": "^3.0.8",
     "@typescript-eslint/eslint-plugin": "^8.45.0",
