--- a/cron/package.json
+++ b/cron/package.json
@@ -7,21 +7,24 @@
     "dev": "ts-node src/index.ts",
     "lint": "eslint .",
     "lint-fix": "eslint . --fix",
-    "test": "echo \"No test specified\" && exit 0",
+    "test": "jest",
+    "test:watch": "jest --watch",
+    "test:coverage": "jest --coverage",
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
     "@my-dashboard/types": "file:../packages/types",
     "config": "^4.1.1",
     "dotenv": "^17.2.2",
+    "ioredis": "^5.8.0",
     "luxon": "^3.7.2",
     "node-cron": "^4.2.1",
-    "ioredis": "^5.8.0",
     "uuid": "^11.1.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.36.0",
     "@types/config": "^3.3.0",
+    "@types/jest": "^30.0.0",
     "@types/luxon": "^3.7.1",
     "@types/node": "^24.6.0",
     "@types/node-cron": "^3.0.8",
@@ -29,6 +32,8 @@
     "@typescript-eslint/parser": "^8.45.0",
     "eslint": "^9.36.0",
     "globals": "^16.4.0",
+    "jest": "^30.2.0",
+    "ts-jest": "^29.4.4",
     "ts-node": "^10.9.2",
     "typescript": "^5.9.2"
   },
