--- a/cron/package.json
+++ b/cron/package.json
@@ -2,7 +2,7 @@
   "name": "cron",
   "version": "1.0.0",
   "scripts": {
-    "build": "tsc",
+    "build": "tsc --project tsconfig.build.json",
     "start": "node dist/index.js",
     "dev": "ts-node src/index.ts",
     "lint": "eslint .",
