ci: Switch Redis server setup to Docker in CI workflows

--- a/.github/workflows/validate-integration.yml
+++ b/.github/workflows/validate-integration.yml
@@ -97,11 +97,10 @@ jobs:
 
       - name: Start Redis server
         run: |
-          sudo apt-get update
-          sudo apt-get install -y redis-server
-          sudo systemctl start redis-server
+          # Start Redis using Docker
+          docker run -d --name redis -p 6379:6379 redis:7-alpine
           # Wait for Redis to be ready
-          timeout 30 bash -c 'until redis-cli ping | grep PONG; do sleep 1; done'
+          timeout 30 bash -c 'until docker exec redis redis-cli ping | grep PONG; do sleep 1; done'
 
       - name: Run database migrations
         run: npm run migrate --workspace=server
@@ -140,38 +139,25 @@ jobs:
           BRUTE_FORCE_WINDOW_MS=600000
           BRUTE_FORCE_MAX_ATTEMPTS=100
           PORT=${{ secrets.SERVER_PORT || '3000' }}
-          
-          # MySQL Configuration
-          MYSQL_HOST: mysql
-          MYSQL_PORT: 3306
-          MYSQL_USER: root
-          MYSQL_PASSWORD: test_password
-          MYSQL_DATABASE: test_db
-          
+          MYSQL_HOST:"mysql"
+          MYSQL_PORT:"3306"
+          MYSQL_USER:"root"
+          MYSQL_PASSWORD:"test_password"
+          MYSQL_DATABASE:"test_db"
           API_SECURITY_KEY=${{ secrets.API_SECURITY_KEY }}
-          
-          # Firebase Configuration
           FIREBASE_PROJECT_ID=${{ secrets.FIREBASE_PROJECT_ID }}
           FIREBASE_PRIVATE_KEY="${{ secrets.FIREBASE_PRIVATE_KEY }}"
           FIREBASE_CLIENT_EMAIL=${{ secrets.FIREBASE_CLIENT_EMAIL }}
           FIREBASE_PRIVATE_KEY_ID=${{ secrets.FIREBASE_PRIVATE_KEY_ID }}
           FIREBASE_CLIENT_ID=${{ secrets.FIREBASE_CLIENT_ID }}
           FIREBASE_CLIENT_CERT_URL=${{ secrets.FIREBASE_CLIENT_CERT_URL }}
-          
-          # GitHub Integration
           GITHUB_TOKEN=your-github-token
           GITHUB_URL=http://localhost:3001/github
-          
-          # Jira Integration
           JIRA_BASE_URL=http://localhost:3001/jira
           JIRA_API_TOKEN="jira-token-placeholder"
-          
-          # CircleCI Integration
           CIRCLE_CI_BASE_URL=http://localhost:3001/circleci
           CIRCLE_CI_PROJECT_PATH="jayc13/my-dashboard"
           CIRCLE_CI_TOKEN="your-circle-ci-token"
-          
-          # Redis Configuration
           REDIS_URL=redis://localhost:6379
           EOF
 
@@ -218,3 +204,6 @@ jobs:
           # Kill any remaining processes on port 3000
           sudo lsof -ti:3001 | xargs -r sudo kill -9 || true
           sudo lsof -ti:3000 | xargs -r sudo kill -9 || true
+          # Stop and remove Redis Docker container
+          docker stop redis || true
+          docker rm redis || true
