--- a/.github/workflows/pr-validation.yml
+++ b/.github/workflows/pr-validation.yml
@@ -213,11 +213,11 @@ jobs:
           BRUTE_FORCE_WINDOW_MS=600000
           BRUTE_FORCE_MAX_ATTEMPTS=100
           PORT=${{ secrets.SERVER_PORT || '3000' }}
-          MYSQL_HOST:"mysql"
-          MYSQL_PORT:"3306"
-          MYSQL_USER:"root"
-          MYSQL_PASSWORD:"test_password"
-          MYSQL_DATABASE:"test_db"
+          MYSQL_HOST="mysql"
+          MYSQL_PORT="3306"
+          MYSQL_USER="root"
+          MYSQL_PASSWORD="test_password"
+          MYSQL_DATABASE="test_db"
           API_SECURITY_KEY=${{ secrets.API_SECURITY_KEY }}
           FIREBASE_PROJECT_ID=${{ secrets.FIREBASE_PROJECT_ID }}
           FIREBASE_PRIVATE_KEY="${{ secrets.FIREBASE_PRIVATE_KEY }}"
