--- a/cron/package.json
+++ b/cron/package.json
@@ -7,7 +7,7 @@
     "dev": "ts-node src/index.ts",
     "lint": "eslint .",
     "lint-fix": "eslint . --fix",
-    "test": "jest",
+    "test": "jest --detectOpenHandles",
     "test:watch": "jest --watch",
     "test:coverage": "jest --coverage",
     "typecheck": "tsc --noEmit"
